--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<nah.prayer.translib.NahScrollViewV
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,24 +16,24 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
     <nah.prayer.translib.NahImageView
         android:id="@+id/iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:imageview_img="@mipmap/ic_launcher"
-        app:imageview_imgPress="@mipmap/ic_launcher"
-        app:imageview_scale="0.9"
-        app:imageview_colorFilter="#88234987"/>
+        app:image_img="@mipmap/ic_launcher"
+        app:image_duration="500"
+        app:image_imgPress="@mipmap/ic_launcher"
+        app:image_scale="0.9"
+        app:image_colorFilter="#88234987"/>
 
     <nah.prayer.translib.NahImageButton
         android:id="@+id/iv_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:imageview_img="@mipmap/ic_launcher"
-        app:imageview_imgPress="@mipmap/ic_launcher"
-        app:imageview_scale="0.9"
-        app:imageview_colorFilter="#88234987"/>
+        app:image_img="@mipmap/ic_launcher"
+        app:image_imgPress="@mipmap/ic_launcher"
+        app:image_scale="0.9"
+        app:image_colorFilter="#88234987"/>
 
     <nah.prayer.translib.NahButton
         android:id="@+id/btn"
@@ -42,7 +48,8 @@
         app:nah_upEffect="true"
         app:nah_animationType="gradient"
         app:nah_labelText="NahButton"
-        app:nah_stroke="4"
+        app:nah_stroke="8"
+        app:nah_duration="200"
         app:nah_strokeColor="@android:color/holo_red_dark"
         app:nah_labelColorClick="@android:color/holo_orange_dark"
         app:nah_labelSize="16"
@@ -63,13 +70,8 @@ android:layout_height="wrap_content">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        app:layout_startColor="@color/colorPrimaryDark"
-        app:layout_midColor="@color/colorPrimary"
-        app:layout_endColor="@color/colorAccent"
-        app:layout_upEffect="true"
-        app:layout_animationType="single"
-        app:layout_scale="0.9"
-        app:layout_round="20">
+        app:layout_duration="500"
+        app:layout_scale="0.9">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,7 +98,7 @@ android:layout_height="wrap_content">
         app:nah_midColor="@android:color/white"
         app:nah_endColor="@android:color/holo_red_dark"
         app:nah_upEffect="true"
-        app:nah_animationType="single"
+        app:nah_animationType="none"
         app:nah_labelText="NahTextView"
         app:nah_stroke="4"
         app:nah_strokeColor="@android:color/holo_red_dark"
@@ -110,3 +112,4 @@ android:layout_height="wrap_content">
         tools:text="NahTextView"/>
 
 </LinearLayout>
+</nah.prayer.translib.NahScrollViewV>
